<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>bolt-game-sun</artifactId>
        <groupId>com.iohao.game</groupId>
        <version>0.0.1-SNAPSHOT</version>
        <relativePath>../../pom.xml</relativePath>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>game-common-logic</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.iohao.game</groupId>
            <artifactId>common-net-client</artifactId>
            <version>${project-revision.version}</version>
        </dependency>

        <dependency>
            <groupId>com.iohao.game</groupId>
            <artifactId>game-common</artifactId>
            <version>${project-revision.version}</version>
        </dependency>

        <dependency>
            <groupId>com.iohao.game</groupId>
            <artifactId>light-all</artifactId>
            <version>${project-revision.version}</version>
        </dependency>
    </dependencies>
</project>